--- a/Template/Home/about_us.html
+++ b/Template/Home/about_us.html
@@ -201,11 +201,9 @@
                 <!-- <img src="assets/images/testimonial-profile-1.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Discovering Be Better was a game-changer! Their unmatched
-                expertise skyrocketed my online presence and credibility. Highly
-                recommended
+                Mrs. Anjali Narvekar, Director & CTO leads innovation in IT infrastructure, delivering cutting-edge solutions to shape the future of technology.
               </p>
-              <p class="testimonial-title">Mrs. Anjali Narvekar</p>
+              <p class="testimonial-title">Mrs. Anjali Narvekar <br>Director & Chief Technology Officer</p>
               <div class="review-stars"></div>
             </div>
             <div class="swiper-slide testimonial-items">
@@ -213,11 +211,9 @@
                 <!-- <img src="assets/images/testimonial-profile-2.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Thanks to Be Better, I've unlocked my true potential and
-                transformed how others perceive me. Their tailored strategies
-                are a must for anyone looking to stand out!
+                Mr. Mahesh Narvekar, Strategic Director & Business Development Head  drives growth, leads projects, and builds strong client relationships.
               </p>
-              <p class="testimonial-title">Mr. Mahesh Narvekar</p>
+              <p class="testimonial-title">Mr. Mahesh Narvekar<br>Director & Business Development and Project Head</p>
               <div class="review-stars"></div>
             </div>
             <div class="swiper-slide testimonial-items">
@@ -225,12 +221,10 @@
                 <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Working with Be Better, was one of the best career decisions
-                I've made. Their dedication resulted in a brand identity that
-                truly resonates with my audience. Invest in your personal brand
-                with them – you won't regret it!
+              Mr. Umesh Narvekar, Director and Diploma Engineer in Hardware & Networking  ensures seamless hardware and networking solutions.
               </p>
-              <p class="testimonial-title">Mr. Umesh Narvekar</p>
+              <p class="testimonial-title">Mr. Umesh Narvekar<br>Director & Diploma Engineer in Hardware & Networking
+                </p>
               <div class="review-stars"></div>
             </div>
 
@@ -239,11 +233,9 @@
                 <!-- <img src="assets/images/testimonial-profile-1.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Discovering Be Better was a game-changer! Their unmatched
-                expertise skyrocketed my online presence and credibility. Highly
-                recommended
+                Mr. Shridhar Belamkar, Senior Software Developer creates innovative software solutions, ensuring high performance and driving technological advancements.
               </p>
-              <p class="testimonial-title">Mr. Shridhar Belamkar</p>
+              <p class="testimonial-title">Mr. Shridhar Belamkar<br>Senior Software Developer</p>
               <div class="review-stars"></div>
             </div>
             <div class="swiper-slide testimonial-items">
@@ -251,11 +243,9 @@
                 <!-- <img src="assets/images/testimonial-profile-2.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Thanks to Be Better, I've unlocked my true potential and
-                transformed how others perceive me. Their tailored strategies
-                are a must for anyone looking to stand out!
+                Prashant Naik is a skilled Cloud Architect , designing scalable, secure cloud solutions that drive efficiency and innovation. 
               </p>
-              <p class="testimonial-title">Mr. Prashant Naik</p>
+              <p class="testimonial-title">Mr. Prashant Naik<br>Cloud Architect</p>
               <div class="review-stars"></div>
             </div>
             <div class="swiper-slide testimonial-items">
@@ -263,12 +253,9 @@
                 <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Working with Be Better, was one of the best career decisions
-                I've made. Their dedication resulted in a brand identity that
-                truly resonates with my audience. Invest in your personal brand
-                with them – you won't regret it!
+                Giridhari Yadav is the detail-oriented Chief Accountant  💼📊, ensuring accurate financial management and supporting the company’s growth and stability. 💰🔍
               </p>
-              <p class="testimonial-title">Mr. Giridhari Yadav</p>
+              <p class="testimonial-title">Mr. Giridhari Yadav<br>Chief Accountant</p>
               <div class="review-stars"></div>
             </div>
 
@@ -277,11 +264,9 @@
                 <!-- <img src="assets/images/testimonial-profile-1.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Discovering Be Better was a game-changer! Their unmatched
-                expertise skyrocketed my online presence and credibility. Highly
-                recommended
+                Imran Shaikh is a creative Software Developer 💻✨, dedicated to building efficient software and delivering high-quality digital solutions to meet the company’s needs. 🌟👨‍💻
               </p>
-              <p class="testimonial-title">Mr. Imran Shaikh</p>
+              <p class="testimonial-title">Mr. Imran Shaikh<br>Software Developer</p>
               <div class="review-stars"></div>
             </div>
 
@@ -290,12 +275,9 @@
                 <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Working with Be Better, was one of the best career decisions
-                I've made. Their dedication resulted in a brand identity that
-                truly resonates with my audience. Invest in your personal brand
-                with them – you won't regret it!
+                Pruthvi Hajare is a skilled Senior Software Developer 💻🚀, leading the development of innovative software solutions and driving technological advancements. 🔧💡
               </p>
-              <p class="testimonial-title">Mr. Pruthvi Hajare</p>
+              <p class="testimonial-title">Mr. Pruthvi Hajare<br>Senior Software Developer</p>
               <div class="review-stars"></div>
             </div>
 
@@ -304,12 +286,9 @@
                 <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Working with Be Better, was one of the best career decisions
-                I've made. Their dedication resulted in a brand identity that
-                truly resonates with my audience. Invest in your personal brand
-                with them – you won't regret it!
+                Yash Gharat is a Software Tester & Developer at Technowin I.T. Infra Pvt. Ltd., ensuring high-quality software through testing and development.
               </p>
-              <p class="testimonial-title">Mr. Yash Gharat</p>
+              <p class="testimonial-title">Mr. Yash Gharat<br>Software Tester & Software Developer</p>
               <div class="review-stars"></div>
             </div>
 
@@ -318,12 +297,9 @@
                 <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Working with Be Better, was one of the best career decisions
-                I've made. Their dedication resulted in a brand identity that
-                truly resonates with my audience. Invest in your personal brand
-                with them – you won't regret it!
+                Vishal Mhalim is a Software Tester, using his analytical skills to deliver high-quality, bug-free software and enhance user experiences.
               </p>
-              <p class="testimonial-title">Mr. Vishal Mhalim</p>
+              <p class="testimonial-title">Mr. Vishal Mhalim<br>Software Tester</p>
               <div class="review-stars"></div>
             </div>
 
@@ -332,12 +308,9 @@
                 <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Working with Be Better, was one of the best career decisions
-                I've made. Their dedication resulted in a brand identity that
-                truly resonates with my audience. Invest in your personal brand
-                with them – you won't regret it!
+                Rishikesh Raorane is a Software Tester , ensuring quality software by identifying bugs and optimizing performance.
               </p>
-              <p class="testimonial-title">Mr. Rishikesh Raorane</p>
+              <p class="testimonial-title">Mr. Rishikesh Raorane<br>Software Tester</p>
               <div class="review-stars"></div>
             </div>
 
@@ -346,11 +319,9 @@
                 <!-- <img src="assets/images/testimonial-profile-2.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Thanks to Be Better, I've unlocked my true potential and
-                transformed how others perceive me. Their tailored strategies
-                are a must for anyone looking to stand out!
+                Riya Patil is a coding expert and tech innovator, crafting cutting-edge software solutions with passion and skill. 
               </p>
-              <p class="testimonial-title">Ms. Riya Patil</p>
+              <p class="testimonial-title">Ms. Riya Patil<br>Senior Software Developer</p>
               <div class="review-stars"></div>
             </div>
 
@@ -359,11 +330,9 @@
                 <!-- <img src="assets/images/testimonial-profile-2.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Thanks to Be Better, I've unlocked my true potential and
-                transformed how others perceive me. Their tailored strategies
-                are a must for anyone looking to stand out!
+                Chaitanya Shetty, a digital enthusiast 🚀, is diving into marketing with creativity and passion, aiming to make an impact in the digital space! 🎯🔥
               </p>
-              <p class="testimonial-title">Ms. Shreya Tawre</p>
+              <p class="testimonial-title">Ms. Chaitanya Shetty<br>Trainee Digital Marketing</p>
               <div class="review-stars"></div>
             </div>
 
@@ -372,12 +341,9 @@
                 <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Working with Be Better, was one of the best career decisions
-                I've made. Their dedication resulted in a brand identity that
-                truly resonates with my audience. Invest in your personal brand
-                with them – you won't regret it!
+                Palavee Chavan, a tech innovator 🎯, builds smart software solutions with a problem-solving mindset 🧩 and love for coding 💡, driving digital excellence! 🚀⚡
               </p>
-              <p class="testimonial-title">Ms. Palavee Chavan</p>
+              <p class="testimonial-title">Ms. Palavee Chavan<br>Software Developer</p>
               <div class="review-stars"></div>
             </div>
 
@@ -386,12 +352,9 @@
                 <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
               </div>
               <p class="testimonial-text">
-                Working with Be Better, was one of the best career decisions
-                I've made. Their dedication resulted in a brand identity that
-                truly resonates with my audience. Invest in your personal brand
-                with them – you won't regret it!
+                Manasi Kamble, a coding enthusiast 💻, specializes in creating innovative solutions with precision 🧐 and a passion for transforming challenges into tech breakthroughs! 🌟💡
               </p>
-              <p class="testimonial-title">Ms. Manasi Kamble</p>
+              <p class="testimonial-title">Ms. Manasi Kamble<br>Software Developer</p>
               <div class="review-stars"></div>
             </div>
           </div>
